--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 This is the code behind http://192.168.noone.org/ which is a rewrite
-of the code behind http://192.168.epe.at/.
-
-See
+of the code behind http://192.168.epe.at/. See
 http://noone.org/blog/English/Computer/Web/192.168.noone.org.futile
 for the blog posting about the launch and background details.
+
+The code is available via git at http://git.noone.org/?p=192.168.git
+as well as http://github.com/xtaran/192.168, and is © 2009, 2010 under
+GPLv2+ by Axel Beckert <abe@deuxchevaux.org>
