--- a/README
+++ b/README
@@ -4,5 +4,5 @@ http://noone.org/blog/English/Computer/Web/192.168.noone.org.futile
 for the blog posting about the launch and background details.
 
 The code is available via git at http://git.noone.org/?p=192.168.git
-as well as http://github.com/xtaran/192.168, and is © 2009, 2010 under
-GPLv2+ by Axel Beckert <abe@deuxchevaux.org>
+as well as http://github.com/xtaran/192.168, and is copyright by Axel
+Beckert <abe@deuxchevaux.org> and licensed under GPLv2+.
